--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="indexRequest.jsp" method="post">
+<form action="src/main/webapp/Old/indexRequest.jsp" method="post">
     姓名<input type="text" name="name"><br><br>
     密码<input type="password" name="pwd"><br><br>
     <input type="radio" value="male" name="sex">男
