--- a/index.html
+++ b/index.html
@@ -5,41 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
-<form action="src/main/webapp/Old/indexRequest.jsp" method="post">
-    姓名<input type="text" name="name"><br><br>
-    密码<input type="password" name="pwd"><br><br>
-    <input type="radio" value="male" name="sex">男
-    <input type="radio" value="female"name="sex">女
-    <br><br>
-    籍贯
-    <select name="from" size="1">
-        <option value=NULL selected>请选择</option>
-        <option value="Beijing" >北京</option>
-        <option value="Shanghai" >上海</option>
-        <option value="Guangzhou" >广东</option>
-        <option value="Nanning" >广西</option>
-        <option value="Wuhan" >湖北</option>
-    </select>
-    <br>
-    <label>
-        <input type="checkbox" value="swim" name="interest">
-        游泳
-    </label>
-    <label>
-        <input type="checkbox" value="run" name="interest">跑步
-    </label>
-    <label>
-        <input type="checkbox" value="ride" name="interest">骑车
-    </label>
-    <br>
-    <br>
-    个人简介
-    <textarea name="introduction" cols="50"rows="10"></textarea><br><br>
-    <input type="submit" value="注册">
-    <input type="submit" value="取消" onclick="this.form.action='index.html';"/>
-
-
-</form>
+<script type="text/javascript">
+    alert("sb");
+</script>
 </body>
 </html>
