--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script type="text/javascript">
-    alert("sb");
-</script>
+    <h1>这是张艺严的个人主页</h1>
 </body>
 </html>
